buildscript {
    ext {
        springBootVersion = '1.2.3.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:0.5.0.RELEASE"
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'spring-boot' 
apply plugin: 'io.spring.dependency-management' 

jar {
    baseName = 'pos'
    version = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
//    compile("org.springframework.cloud:spring-cloud-starter-oauth2")
    compile "org.springframework.boot:spring-boot-starter-data-jpa"
    compile "org.springframework.boot:spring-boot-starter-hateoas"
//    compile("org.springframework.boot:spring-boot-starter-security")
    compile "org.springframework.boot:spring-boot-starter-web"
//    compile("org.springframework.boot:spring-boot-starter-websocket")

    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr353:2.4.4"

    runtime "com.h2database:h2"

    testCompile "com.jayway.jsonpath:json-path-assert:0.5.5"
    testCompile "com.jayway.jsonpath:json-path:0.9.1"
    testCompile "org.springframework.boot:spring-boot-starter-test"
}

//dependencyManagement {
//	imports {
//		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:1.0.1.RELEASE"
//	}
//}


task wrapper(type: Wrapper) {
    gradleVersion = '2.3'
}
